<resources>
    <string name="app_name">Student</string>
    <string name="selectdepartment">Select Your Department Below</string>
    <string name="studentname">Enter Surname</string>
    <string name="studentmatricno">Matriculation or JAMB Number</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="contact_number_incase_of_emergency">Parent Contact</string>
    <string name="already_registered_sign_in_here">Already Registered? Sign In Here</string>
    <string name="enter_your_password3">Enter Your Password</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="select_your_gender">Select Your Gender</string>
    <string name="login">Login</string>
    <string name="yet_to_register_click">Yet to register? Click</string>
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <string-array name="level">
        <item>100</item>
        <item>200/DE</item>
        <item>300</item>
        <item>400</item>
    </string-array>
    <string-array name="arts">
        <item>English</item>
        <item>History</item>
        <item>Theatre Art</item>
    </string-array>

    <string-array name="natural">
        <item>Microbiology</item>
        <item>Biochemistry</item>
        <item>Chemistry</item>
        <item>Geography</item>
        <item>Mathematics</item>
        <item>Computer Science</item>
        <item>Microbiology</item>


    </string-array>

    <string-array name="departments">
        <item>Accounting</item>
        <item>Biochemistry</item>
        <item>Chemistry</item>
        <item>Computer Science</item>
        <item>Economics</item>
        <item>English</item>
        <item>Geography</item>
        <item>History</item>
        <item>Mathematics</item>
        <item>Economics</item>
        <item>Microbiology</item>
        <item>Management</item>
        <item>Mass Communication</item>
        <item>Microbiology</item>
        <item>Political Science</item>
        <item>Psychology</item>
        <item>Sociology</item>
        <item>Theatre Art</item>
    </string-array>
    <string-array name="faculties">
        <item>Arts And Humanity</item>
        <item>Management Science</item>
        <item>Natural And Applied Science</item>
        <item>Social Science</item>
    </string-array>

    <string-array name="management">
        <item>Accounting</item>
        <item>Management</item>
    </string-array>

    <string-array name="social">
        <item>Political Science</item>
        <item>Psychology</item>
        <item>Sociology</item>
        <item>Economics</item>
        <item>Mass Communication</item>
    </string-array>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
