<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/hostel"
    android:layout_height="match_parent"
    tools:context=".SetUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/setUpImageButton"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_account"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Choose your faculty below"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/faculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:entries="@array/faculties">

        </Spinner>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/selectdepartment"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:entries="@array/departments">

        </Spinner>


        <EditText
            android:id="@+id/editTextFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_account_box"
            android:hint="Full Name"
            android:background="@drawable/edit_rounded"
            android:padding="10dp"
            android:inputType="text"
            android:maxLength="35" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/select_your_gender"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:entries="@array/gender">

        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Level"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:entries="@array/level">

        </Spinner>



        <EditText
            android:id="@+id/editTextMatriculation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_info"
            android:hint="@string/studentmatricno"
            android:inputType="text"
            android:maxLength="19"
            android:background="@drawable/edit_rounded"
            android:padding="10dp"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_phone"
            android:hint="@string/enter_your_phone_number"
            android:inputType="phone"
            android:background="@drawable/edit_rounded"
            android:padding="10dp"
            android:maxLength="11" />

        <EditText
            android:id="@+id/editTextEmergencyNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_phone"
            android:layout_marginTop="20dp"
            android:hint="@string/contact_number_incase_of_emergency"
            android:background="@drawable/edit_rounded"
            android:padding="10dp"
            android:inputType="phone"
            android:maxLength="11" />


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_rounded"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_email"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_rounded"
            android:drawableLeft="@drawable/ic_lock"
            android:padding="10dp"
            android:hint="Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextCPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock"
            android:layout_marginTop="20dp"
            android:hint="Confirm Your Password"
            android:background="@drawable/edit_rounded"
            android:padding="10dp"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:text="Register"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/textViewSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/already_registered_sign_in_here"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

    </LinearLayout>


</ScrollView>